--- a/index.html
+++ b/index.html
@@ -13,11 +13,20 @@
 
         <header>
             <div class="header-top">
-
+               <img src="img/natural-logo.png" alt="logo natural"> 
+               <h2>Another beautiful</h2>
             </div>
 
             <nav class="header-menu">
-
+                <ul>
+                    <li><a href=""> Home</a></li>
+                    <li><a href=""> About</a></li>
+                    <li><a href=""> Page templates</a></li>
+                    <li><a href=""> A parent page</a></li>
+                    <li><a href=""> Features</a></li>
+                    <li><a href=""> Blog</a></li>
+                    <li><a href=""> Contacts</a></li>
+                </ul>
             </nav>
         </header>
 
